# infojenn

./: .gitignore  Cargo.toml  README.md
src/: compute.rs  data.rs  feature.rs  ic.rs  item.rs  lib.rs  model.rs  subjects.rs
src/ic/: cohort.rs  mod.rs
src/semsim/: ic.rs  mod.rs
tests/: subjects.rs  test_ic.rs  test_semsim.rs
tests/conftest/: fbn1.rs  mod.rs
tests/data/: mod.rs
