[package]
name = "infojenn"
description = "Compute information content of ontology terms from corpora of annotated items"
version = "0.1.2-dev0"
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[dependencies]
ontolius = { version = "0.5.2", default-features = false }
phenotypes = "0.1.2"

[dev-dependencies]
ontolius = { version = "0.5.2", features = ["obographs", "csr"] }
flate2 = "1.1.0"
