[package]
name = "infojenn"
description = "Compute information content of ontology terms from corpora of annotated items"
version = "0.1.3"
edition = "2021"

homepage = "https://github.com/ielis/infojenn"
repository = "https://github.com/ielis/infojenn"
readme = "README.md"
license-file = "LICENSE"

[badges]
maintenance = { status = "experimental" }

[dependencies]
ontolius = { version = "0.5.2", default-features = false }
phenotypes = "0.1.2"

[dev-dependencies]
ontolius = { version = "0.5.2", features = ["obographs", "csr"] }
flate2 = "1.1.0"
